# ctx

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CTX_REFERENCE.md  Cargo.toml  FINAL_REVIEW.md  GETTING_STARTED.md  IMPROVEMENTS_SUMMARY.md  INSTALL.md  M1_ACCEPTANCE_TEST_RESULTS.md  M1_COMPLETE.md  M1_IMPLEMENTATION_SUMMARY.md  M1_IMPROVEMENTS_APPLIED.md  M1_REVIEW.md  M4_COMPLETE.md  M4_IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  MVP_COMPLETE.md  Makefile  PROJECT_SETUP_COMPLETE.md  QUICKSTART.md  README.md  REVIEW.md  REVIEW_FIXES_APPLIED.md  TECHNICAL_PLAN.md  WALKTHROUGH.md
.agent/skills/ctx/: SKILL.md
.github/workflows/: ci.yml  release.yml
Formula/: ctx.rb
crates/ctx-cli/: Cargo.toml
crates/ctx-cli/src/: cli.rs  main.rs
crates/ctx-cli/src/commands/: init.rs  install.rs  mcp.rs  mod.rs  pack.rs  suggest.rs  ui.rs  web.rs  web_ui.html
crates/ctx-config/: Cargo.toml
crates/ctx-config/src/: lib.rs
crates/ctx-core/: Cargo.toml
crates/ctx-core/src/: artifact.rs  error.rs  lib.rs  pack.rs  render.rs  snapshot.rs
crates/ctx-engine/: Cargo.toml
crates/ctx-engine/src/: lib.rs
crates/ctx-mcp/: Cargo.toml
crates/ctx-mcp/src/: lib.rs  protocol.rs  server.rs  stdio.rs  tools.rs
crates/ctx-security/: Cargo.toml
crates/ctx-security/src/: denylist.rs  lib.rs  redactor.rs
crates/ctx-sources/: Cargo.toml
crates/ctx-sources/src/: collection.rs  denylist.rs  file.rs  git.rs  handler.rs  lib.rs  text.rs  url.rs
crates/ctx-storage/: Cargo.toml
crates/ctx-storage/src/: blob.rs  db.rs  error.rs  lib.rs  models.rs
crates/ctx-storage/src/migrations/: 001_initial.sql
crates/ctx-suggest/: Cargo.toml
crates/ctx-suggest/src/: cache.rs  lib.rs
crates/ctx-suggest/src/parsers/: mod.rs  python.rs  rust.rs  typescript.rs
crates/ctx-suggest/src/signals/: git_cochange.rs  imports.rs  mod.rs
crates/ctx-tokens/: Cargo.toml
crates/ctx-tokens/src/: estimator.rs  lib.rs
crates/ctx-tui/: Cargo.toml
crates/ctx-tui/src/: app.rs  file_browser.rs  lib.rs  ui.rs
tests/: integration_test.rs  integration_test.sh
vscode-ctx/: .eslintrc.json  .vscodeignore  package-lock.json  package.json  tsconfig.json
vscode-ctx/src/: config.ts  extension.ts
vscode-ctx/src/api/: client.ts  types.ts
vscode-ctx/src/commands/: artifactCommands.ts  packCommands.ts  suggestCommands.ts  syncCommands.ts
vscode-ctx/src/ctxToml/: watcher.ts
vscode-ctx/src/server/: health.ts  lifecycle.ts
vscode-ctx/src/statusBar/: StatusBarManager.ts
vscode-ctx/src/views/: PacksTreeProvider.ts  PreviewPanel.ts
