# ctx - Workspace Root
[workspace]
members = [
    "crates/ctx-cli",
    "crates/ctx-core",
    "crates/ctx-storage",
    "crates/ctx-sources",
    "crates/ctx-security",
    "crates/ctx-tokens",
    "crates/ctx-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ctx contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/ctx"

[workspace.dependencies]
# Internal crates
ctx-core = { path = "crates/ctx-core" }
ctx-storage = { path = "crates/ctx-storage" }
ctx-sources = { path = "crates/ctx-sources" }
ctx-security = { path = "crates/ctx-security" }
ctx-tokens = { path = "crates/ctx-tokens" }
ctx-mcp = { path = "crates/ctx-mcp" }

# CLI & config
clap = { version = "4.4", features = ["derive", "cargo", "env"] }
clap_complete = "4.4"
config = "0.13"
directories = "5.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Hashing & crypto
sha2 = "0.10"
blake3 = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }

# Token estimation
tiktoken-rs = "0.5"

# File system & glob
glob = "0.3"
walkdir = "2.4"
ignore = "0.4"

# Git operations
git2 = "0.18"

# HTTP server (for MCP)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex
regex = "1.10"
lazy_static = "1.4"

# Time
time = { version = "0.3", features = ["serde", "macros"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Command execution
which = "5.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
