[workspace]
members = [
    "crates/ctx-cli",
    "crates/ctx-core",
    "crates/ctx-storage",
    "crates/ctx-sources",
    "crates/ctx-security",
    "crates/ctx-tokens",
    "crates/ctx-engine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ctx contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
ctx-core = { path = "crates/ctx-core" }
ctx-storage = { path = "crates/ctx-storage" }
ctx-sources = { path = "crates/ctx-sources" }
ctx-security = { path = "crates/ctx-security" }
ctx-tokens = { path = "crates/ctx-tokens" }

# CLI framework
clap = { version = "4.4", features = ["derive", "cargo", "env"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing & crypto
blake3 = "1.5"

# File system & glob
glob = "0.3"
walkdir = "2.4"
ignore = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex
regex = "1.10"

# Time
time = { version = "0.3", features = ["serde", "macros"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config management
directories = "5.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
