[workspace]
members = [
    "crates/ctx-cli",
    "crates/ctx-core",
    "crates/ctx-storage",
    "crates/ctx-sources",
    "crates/ctx-security",
    "crates/ctx-tokens",
    "crates/ctx-engine",
    "crates/ctx-config",
    "crates/ctx-tui",
    "crates/ctx-suggest",
]
default-members = ["crates/ctx-cli"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
authors = ["ctx contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
ctx-core = { path = "crates/ctx-core" }
ctx-storage = { path = "crates/ctx-storage" }
ctx-sources = { path = "crates/ctx-sources" }
ctx-security = { path = "crates/ctx-security" }
ctx-tokens = { path = "crates/ctx-tokens" }
ctx-engine = { path = "crates/ctx-engine" }
ctx-mcp = { path = "crates/ctx-mcp" }
ctx-config = { path = "crates/ctx-config" }
ctx-tui = { path = "crates/ctx-tui" }
ctx-suggest = { path = "crates/ctx-suggest" }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo", "env"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing & crypto
blake3 = "1.5"

# File system & glob
glob = "0.3"
walkdir = "2.5"
ignore = "0.4"

# HTTP server (for MCP)
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# PTY for terminal-in-browser
portable-pty = "0.8"
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regex
regex = "1.11"

# Time
time = { version = "0.3", features = ["serde", "macros"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config management
directories = "5.0"
toml = "0.8"

# Clipboard
arboard = "3.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
