[package]
name = "ctx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
ctx-core = { workspace = true }
ctx-storage = { workspace = true }
ctx-sources = { workspace = true }

clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
