[package]
name = "ctx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "ctx"
path = "src/main.rs"

[dependencies]
ctx-core = { workspace = true }
ctx-tokens = { path = "../ctx-tokens" }
ctx-engine = { path = "../ctx-engine" }
ctx-storage = { workspace = true }
ctx-sources = { workspace = true }
ctx-mcp = { workspace = true }
ctx-config = { workspace = true }

clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
blake3 = { workspace = true }
