[package]
name = "ctx-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
time = { workspace = true }

# Hashing
blake3 = { workspace = true }
uuid = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
