[package]
name = "ctx-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
ctx-core = { path = "../ctx-core" }
ctx-storage = { path = "../ctx-storage" }
ctx-sources = { path = "../ctx-sources" }
ctx-tokens = { path = "../ctx-tokens" }
ctx-security = { workspace = true }

blake3 = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
