[package]
name = "ctx-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal crates
ctx-core = { workspace = true }
ctx-storage = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
