[package]
name = "ctx-sources"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal crates
ctx-core = { workspace = true }

# File system
glob = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }

# Git
git2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Hashing
blake3 = { workspace = true }

# Time
time = { workspace = true }

# Command execution
which = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
