[package]
name = "ctx-sources"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ctx-core = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
