[package]
name = "ctx-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Internal crates
ctx-core = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true }

# Time
time = { workspace = true }

# Hashing
blake3 = { workspace = true }

# File system
directories = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
