[package]
name = "ctx-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ctx-core = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
directories = { workspace = true }
